add functionality and styling

--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
+  background: url(https://d1gfl225tt6t6k.cloudfront.net/img/hero-large-750w/drum-lessons1527266880.jpg) bottom center;
   background-size: cover;
 }
 
@@ -19,33 +19,38 @@ body,html {
 }
 
 .key {
-  border: .4rem solid black;
-  border-radius: .5rem;
+  border: .4rem solid rgb(24, 24, 24);
+  border-radius: 10rem;
   margin: 1rem;
-  font-size: 1.5rem;
-  padding: 1rem .5rem;
+  font-size: 2rem;
+  padding: 1rem;
   transition: all .07s ease;
   width: 10rem;
+  height: 10rem;
   text-align: center;
   color: white;
-  background: rgba(0,0,0,0.4);
-  text-shadow: 0 0 .5rem black;
+  background: rgba(68, 68, 68, 0.527);
+  text-shadow: 0 0 .5rem rgb(73, 73, 73);
 }
 
 .playing {
   transform: scale(1.1);
-  border-color: #ffc600;
-  box-shadow: 0 0 1rem #ffc600;
+  border-color: #00ffff;
+  box-shadow: 0 0 1rem rgb(0, 255, 255);
+  background: rgba(0, 255, 255, 0.25);
+
 }
 
 kbd {
   display: block;
-  font-size: 4rem;
+  font-size: 2rem;
 }
 
 .sound {
-  font-size: 1.2rem;
+  font-size: 2rem;
   text-transform: uppercase;
   letter-spacing: .1rem;
-  color: #ffc600;
+  color: #00ffff;
+  margin-top: 2rem;
+  height: 4rem;
 }
